# NXSuperbuild

./: .gitignore  CMakeLists.txt  ReadMe.md
Qt5-Build-Tools/: qt-5.15.2-build.bash  qt-5.15.2-build.zsh  qt-5.15.x-build.bash  qt3d_miniz.patch  qtbase_qiosurfacegraphicsbuffer.patch
Qt5-Build-Tools/tools/macos/: build-qt
docker/: Dockerfile
docs/: Making_an_SDK_Linux.md  Making_an_SDK_OSX.md  Making_an_SDK_Windows.md
projects/: Discount.cmake  EbsdLib.cmake  Eigen.cmake  H5Support.cmake  HDF5.cmake  Haru.cmake  ITK5.cmake  Pybind11.cmake  Python.cmake  Qt5.cmake  Qwt.cmake  TBB.cmake  VTK.cmake  catch2.cmake  expected-lite.cmake  fmt.cmake  ghcFileSystem.cmake  mp11.cmake  nlohmann_json.cmake  nod.cmake  oneTBB.cmake  reproc.cmake  span-lite.cmake
projects/ITK/: Build_ITK.bat.in  Build_ITK.cmake.in
projects/apple/: OSX_NX_SDK.cmake
projects/patches/qwt/: qwtconfig.pri.in
projects/unix/: Linux_NX_SDK.cmake  Qt5_linux_install.sh.in
projects/win32/: Qt_HeadlessInstall.bat  WIN_NX_SDK.cmake
